# home

./: .gitignore  .nojekyll  404.html  404.qmd  CNAME  README.md  _config.yml  _quarto.yml  _variables.yml  atom.html  atom.qmd  atom.xml  bibfile.bib  blog.html  checkanim.html  contact.html  contact.qmd  environment.yml  index.html  index.qmd  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
_includes/: analytics.html  head.html  mathjax.html  sidebar.html
_layouts/: default.html  post.html
_posts/: 2014-01-02-introducing-lanyon.md  2015-09-02-blog-post.html  2015-09-02-round-round-get-around.md  2015-09-17-a-language-favoured-by-pirates.html  2015-09-17-language-for-pirates.md  2015-09-18-inequality-in-us.html  2015-09-25-a-new-library.html  2015-09-28-a-treasure-map.html  2016-06-30-rise-of-the-robots.html  2016-08-03-the-economics-of-olympics.html  2016-09-11-data-storage-goes-viral.html  2016-10-13-machine-learning-on-the-tube.html  2016-11-16-what-if-machines-could-collude-on-price.html  2016-12-12-serious-trust-issues.html  2017-03-02-the-social-influence-of-genes.html  2017-03-16-trust-me-im-a-doctor.html  2017-09-27-testpost.md  2017-11-10-better-narrative-on-narratives.md  2017-12-28-ONS-API.md  2017-12-28-example-maths-post.md  2018-01-08-making-big-data-useful.md  2018-01-31-publication-quality-plots-in-python.md  2018-02-10-econometrics-in-python-partI-ML.md  2018-02-20-econometrics-in-python-partII-fixed-effects.md  2018-03-28-estimation-heterogeneous-treatment-random-forests.md  2018-05-05-running-many-regressions-alongside-pandas.md  (+11 more)
(+250 files in other folders)
