[project]
name = "home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas-datareader>=0.10.0",
    "pandas>=2.2.3",
    "jupyterlab>=4.3.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.3",
    "statsmodels>=0.14.4",
]

[tool.ruff]
# Enable the isort rules.
extend-select = ["I"]
